[package]
name = "discrust"
version = "0.1.4"
edition = "2018"

[lib]
name = "discrust"
crate-type = ["cdylib"]

# [workspace]
# members=["crates/*/"]

[dependencies]
discrust_core = {version="0.1.3", path="crates/discrust_core"}
numpy = "0.15"
ndarray = "0.15.1"

[dependencies.pyo3]
version = "0.15"
features = ["extension-module"]
