[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"

[project]
name = "discrust"
description = "Supervised discretization with Rust"
license = {file = "LICENSE"}
keywords = ["rust", "discretize", "scorecard", "numpy", "machine learning"]
authors = [
  {name = "James Inlow"}
]
maintainers = [
  {name = "James Inlow"}
]
readme = "README.md"
dependencies = ["numpy>=1.21", "pandas>=1.3"]